# Roberto

./: .gitignore  CMakeLists.txt  CMakePresets.json  Gui.cpp  Roberto.cpp  Window.cpp
CMakeModules/: Findtmxlite.cmake
Resources/maps/: TestMap.tmj  box0.tsx  clover 1.tsx  dirt 1.tsx  grenade_launcher.tsx  grenade_launcher_ammo.tsx  large stone wall.tsx  paving 6.tsx  pepsi.tsx  rock 3.tsx  stone 1.tsx  stone 2.tsx  stone 3.tsx  testMap.tmx  wall1.tsx  wall2.tsx
Resources/maps/templates/: box0.tx
Resources/shaders/: ExplosionSharer.frag  Shader.frag  SmokeShader.frag  TestShader.frag
ShaderTest/: main.cpp
include/: Ammo.h  Animation.h  Camera.h  CollisionHandler.h  DynamicProjectile.h  Entity.h  FeatureTester.h  Game.h  GameMath.h  GameObject.h  GameObjectData.h  GlobalConsts.h  Gui.h  HeadUpDisplay.h  HeadsUpDisplay.h  Level.h  MapLoader.h  Player.h  Roberto.h  Settings.h  TextureManager.h  Weapon.h  Window.h  tinyxml2.h
include/Ammo/: AmmoGrenadeLauncher.h
include/Weapons/: GrenadeLauncher.h  Weapons.h
libs/tmxlite/DebugShared/: libtmxlite-d.dll.recipe  vc143.idb
libs/tmxlite/DebugShared/tmxlite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  tmxlite.lastbuildstate
modules/thor/: CONTROL
modules/thor/include/Thor/: Config.hpp
modules/thor/lib/: thor.lib
modules/thor/share/thor/: vcpkg.spdx.json  vcpkg_abi_info.txt
modules/tmxlite/lib/: SFMLExample.lib  tmxlite-d.lib  tmxlite.lib
sfmlTest/: main.cpp
src/: Ammo.cpp  Animation.cpp  Camera.cpp  DynamicProjectile.cpp  Entity.cpp  FeatureTester.cpp  FeatureTesterM.cpp  Game.cpp  GameMath.cpp  GameObject.cpp  GameObjectData.cpp  GlobalConsts.cpp  Gui.cpp  HeadUpDisplay.cpp  HeadsUpDisplay.cpp  Level.cpp  MapLoader.cpp  Player.cpp  Roberto.cpp  Settings.cpp  TextureManager.cpp  Weapon.cpp  Window.cpp  tinyxml2.cpp
src/Ammo/: AmmoGrenadeLauncher.cpp
src/Weapons/: GrenadeLauncher.cpp
tester/: main.cpp
